Add splash page with automatic edurov detection.

--- a/edurov_server/electron/main_window/index.html
+++ b/edurov_server/electron/main_window/index.html
@@ -2,10 +2,10 @@
 <head>
     <title>eduROV</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="./static/style.css">
-    <link rel="stylesheet" type="text/css" href="./static/bootstrap.css">
+    <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../static/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/bootstrap.css">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: ws: ssl.gstatic.com 'unsafe-inline';">
 </head>
 <body>
