Add connection source to search report.

--- a/edurov_server/electron/splash_screen/index.html
+++ b/edurov_server/electron/splash_screen/index.html
@@ -35,10 +35,11 @@
                     Search
                 </button>
                 <p></p>
-                <table id="table_ip_results">
+                <table id="table_ip_results" style="width: 100%;">
                     <thead>
                         <th>Host Name</th>
                         <th>IP</th>
+                        <th>Interface</th>
                     </thead>
                     <tbody>
                     </tbody>
