Updates from testing

--- a/edurov_client/main_window/index.html
+++ b/edurov_client/main_window/index.html
@@ -55,12 +55,12 @@
                     <tbody>
                     <tr>
                         <th scope="row">Temperature</th>
-                        <td id="tempWater"></td>
+                        <td id="water_temperature"></td>
                         <td>&#8451</td>
                     </tr>
                     <tr>
                         <th scope="row">Pressure</th>
-                        <td id="pressureWater"></td>
+                        <td id="water_pressure"></td>
                         <td>kPa</td>
                     </tr>
                     </tbody>
@@ -74,7 +74,7 @@
                     <tbody class="table-borderless">
                     <tr id="voltageTr">
                         <th scope="row">Battery</th>
-                        <td id="batteryVoltage"></td>
+                        <td id="battery"></td>
                         <td>V</td>
                     </tr>
                     <tr id="diskTr">
@@ -103,22 +103,22 @@
                     <tbody class="table-borderless">
                         <tr id="voltageTr">
                             <th scope="row">Port</th>
-                            <td id="motor_port"></td>
+                            <td id="motor1_current"></td>
                             <td>mA</td>
                         </tr>
                         <tr id="diskTr">
                             <th scope="row">Starboard</th>
-                            <td id="motor_starboard"></td>
+                            <td id="motor2_current"></td>
                             <td>mA</td>
                         </tr>
                         <tr id="cpuTr">
                             <th scope="row">Up 1</th>
-                            <td id="motor_up_1"></td>
+                            <td id="motor3_current"></td>
                             <td>mA</td>
                         </tr>
                         <tr id="cpuLr">
                             <th scope="row">Up 2</th>
-                            <td id="motor_up_2"></td>
+                            <td id="motor4_current"></td>
                             <td>mA</td>
                         </tr>
                     </tbody>
