--- a/edurov_client/splash_screen/index.html
+++ b/edurov_client/splash_screen/index.html
@@ -38,11 +38,15 @@
                         title="Trigger a search for Raspberry PIs on the network">
                     Search
                 </button>
+                <div class="progress">
+                    <div class="progress-bar" id="search_progress" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
                 <table class="table table-hover" style="overflow: scroll;">
                     <thead>
-                        <th scope="col">Host Name</th>
                         <th scope="col">IP</th>
+                        <th scope="col">Mac</th>
                         <th scope="col">Interface</th>
+                        <th scope="col">Raspberry PI</th>
                     </thead>
                     <tbody id="table_ip_results">
                     </tbody>
